--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-select": "^1.2.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
